Header Section done, and package.json edit

--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whether App</title>
-      <link href="./output.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="./output.css" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
-<body>
+<body class="bg-gray-900 text-amber-100">
+    <div class="container mx-auto px-4 py-6">
+        <header class="mb-8">
+            <h1 class=" text-3xl md:text-4xl font-bold text-center">
+                <i class="fas fa-cloud-sun text-blue-500 mr-2"></i>
+                Weather Forecast Dashboard
+            </h1>
+            <p class="text-center mt-2">Get real-time weather updates for any city</p>
+        </header>
+    </div>
+  
+        
     
+
+   
 </body>
 </html>
