--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whether App</title>
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic"
+        rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="./output.css" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
-<body class="bg-gray-900 text-amber-100">
-    <div class="container mx-auto px-4 py-6">
-        <header class="mb-8">
-            <h1 class=" text-3xl md:text-4xl font-bold text-center">
-                <i class="fas fa-cloud-sun text-blue-500 mr-2"></i>
-                Weather Forecast Dashboard
-            </h1>
-            <p class="text-center mt-2">Get real-time weather updates for any city</p>
-        </header>
-    </div>
-  
-        
-    
 
-   
+<body class="bg-gray-900 text-amber-100">
+   <div id="animation-con">
+
+   </div>
+  
+   <div id="loading" class="fixed inset-0  flex items-center justify-center">
+        <div>
+            <i class="fas fa-spinner fa-spin text-5xl mb-4 text-blue-400"></i>
+            <p class="text-xl">Fetching Your Whether...</p>
+        </div>
+   </div>
+
+   <div id="error" class="fixed insert-0 flex items-center justify-center z-50 hidden">
+        <div class="bg-red-900 border border-red-700 rounded-lg shadow-xl p-6 w-11/12 text-center">
+            <h3 class="text-2xl font-bold mb-4">Oops! Something went wrong.</h3>
+            <p class="mb-6">Could not fetch weather data.</p>
+             <button class="bg-red-600 hover:700 text-white font-bold py-2 px-6 rounded-2xl" id="close-btn">Close</button>
+        </div>
+   </div>
+
 </body>
+
 </html>
