--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
 
     </div>
 
-    <!-- <div id="loading" class="fixed inset-0  flex items-center justify-center">
+    <div id="loading" class="fixed inset-0  flex items-center justify-center">
         <div>
             <i class="fas fa-spinner fa-spin text-5xl mb-4 text-blue-400"></i>
             <p class="text-xl">Fetching Your Whether...</p>
         </div>
-   </div> -->
+   </div>
 
     <div id="error" class="fixed insert-0 flex items-center justify-center z-50 hidden">
         <div class="bg-red-900 border border-red-700 rounded-lg shadow-xl p-6 w-11/12 text-center">
             <h3 class="text-2xl font-bold mb-4">Oops! Something went wrong.</h3>
-            <p class="mb-6">Could not fetch weather data.</p>
+            <p class="mb-6" id="error-msg">Could not fetch weather data.</p>
             <button class="bg-red-600 hover:700 text-white font-bold py-2 px-6 rounded-2xl"
                 id="close-btn">Close</button>
         </div>
     </div>
 
 
-    <div class="min-h-screen w-full p-4 duration-75">
+    <div class="min-h-screen w-full p-4 duration-75" id="weather-content">
         <div class="w-full mx-auto mb-8 relative">
             <form id="search-form" class="flex items-center">
                 <input type="text" id="city-input" placeholder="Search for city..."
@@ -48,12 +48,16 @@
             <div class="space-y-8">
                 <div class="p-6 rounded-3xl shadow-2xl card text-shadow flex flex-col items-centerjustify-center">
                     <div class="text-center text-white">
-                        <h2 class="text">City Name</h2>
+                        <h2 id="city-name" class="text">City Name</h2>
                         <p id="current-date">Monday,July 2025</p>
                         <p id="current-time" class="class="text-lg">00:00:00 Am</p>
                         <p id="current-temp" class="text-lg">0</p>
-                        <p id="current-wheather" class="text-xl ">Weather</p>
+                        <p id="current-weather" class="text-xl ">Weather</p>
                     </div>
+                    <img id="icon" src="" alt="">
+                </div>
+                <div id="forecast-con">
+                    <h3>5-Day Forecast</h3>
                 </div>
             </div>
         </main>
