try and catch error

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
 
-    <div class="min-h-screen w-full p-4 duration-75" id="weather-content">
+    <div class="min-h-screen w-full p-4 duration-75 opacity-0" id="weather-content">
         <div class="w-full mx-auto mb-8 relative">
             <form id="search-form" class="flex items-center">
                 <input type="text" id="city-input" placeholder="Search for city..."
