--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         
     </div>
     
-    <div id="loading" class="fixed inset-0  flex items-center justify-center">
-        <div>
+    <div id="loading" class="fixed inset-0 flex items-center justify-center">
+        <div class="flex flex-col items-center justify-center text-center">
             <i class="fas fa-spinner fa-spin text-5xl mb-4 text-blue-400"></i>
             <p class="text-xl">Fetching Your Whether...</p>
         </div>
